--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     
-    <script src="object.js"></script>
+
+    <script src="p5/sketch.js"></script>
+    <script src="p5/game.js"></script>
+    <script src="p5/object.js"></script>
+    <script src="p5/pointer.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
