feat: node web server 1.0.4

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,17 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
+  
+  <script src="/src/p5/sketch.js"></script>
+  <script src="/src/p5/game.js"></script>
+  <script src="/src/p5/object.js"></script>
+  <script src="/src/p5/pointer.js"></script>
 
-  <script src="p5/sketch.js"></script>
-  <script src="p5/game.js"></script>
-  <script src="p5/object.js"></script>
-  <script src="p5/pointer.js"></script>
+  <script src="/src/scripts/windowLoad.js"></script>
+  <script src="/src/scripts/handleGameSettings.js"></script>
 
-  <script src="scripts/windowLoad.js"></script>
-  <script src="scripts/handleGameSettings.js"></script>
-
-  <link rel="stylesheet" href="styles/game.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="/src/styles/game.css">
+  <link rel="stylesheet" href="/src/styles/style.css">
 
   <title>CirclesBox</title>
 </head>
