--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,11 +13,12 @@
   <script src="p5/object.js"></script>
   <script src="p5/pointer.js"></script>
 
-  <script src="scripts/windowLoad.js"></script>
-  <script src="scripts/handleGameSettings.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
+  <script src="p2p/message.js"></script>
   <script src="p2p/peer.js"></script>
+
+  <script src="scripts/handleGameSettings.js"></script>
+  <script src="scripts/handleRooms.js"></script>
 
   <link rel="stylesheet" href="styles/game.css">
   <link rel="stylesheet" href="styles/style.css">
@@ -46,8 +47,8 @@
         </a>
       </div>
       <nav class="support-nav flex-row justify-between align-center">
-        <a href="#rooms-modal">Rooms</a>
-        <a href="#settings-modal" onClick="displaySettings()">Settings</a>
+        <a href="#rooms-modal" onclick="getRooms()">Rooms</a>
+        <a href="#settings-modal" onclick="displaySettings()">Settings</a>
         <a href="#">Leaderboard</a>
         <a href="#">Help</a>
       </nav>
@@ -60,22 +61,8 @@
         <a href="#">Exit</a>
       </div>
       <div class="modal__content" id="rooms">
-        <div class="room">
-          <div class="room-info">
-            <span>uhui3-dawdwad-dwadaw-dwa</span>
-            <span>4 Players</span>
-          </div>
-          <a href="#">Join</a>
-        </div>
-        <div class="room">
-          <div class="room-info">
-            <span>uhui3-dawdwad-dwadaw-dwa</span>
-            <span>4 Players</span>
-          </div>
-          <a href="#">Join</a>
-        </div>
-
-        <a class="modal__nav" href="#">
+        <div id="rooms-list"><!-- Rooms List --></div>
+        <a class="modal__nav" href="#" onclick="createRoom()">
           Create a room
         </a>
       </div>
