--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,6 +12,7 @@
   <script src="p5/game.js"></script>
   <script src="p5/object.js"></script>
   <script src="p5/pointer.js"></script>
+  <script src="p5/p2p.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
   <script src="p2p/message.js"></script>
