--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,13 +10,13 @@
 
   <script src="p5/sketch.js"></script>
   <script src="p5/game.js"></script>
-  <script src="p5/object.js"></script>
+  <script src="p5/circle.js"></script>
   <script src="p5/pointer.js"></script>
-  <script src="p5/p2p.js"></script>
-
+  
   <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
   <script src="p2p/message.js"></script>
   <script src="p2p/peer.js"></script>
+  <script src="p2p/p2p.js"></script>
 
   <script src="scripts/handleGameSettings.js"></script>
   <script src="scripts/handleRooms.js"></script>
@@ -93,15 +93,15 @@
           <h2>Circle Units</h2>
           <div class="slider">
             <input id="unitsInput" type="range" onchange="onChangeSlider(this.value, 'units')" min="3" value="7"
-              max="15" />
+              max="20" />
             <span id="units"></span>
           </div>
         </div>
         <div class="setting">
           <h2>Circle Radius</h2>
           <div class="slider">
-            <input id="radiusInput" type="range" onchange="onChangeSlider(this.value, 'radius')" min="10" value="14"
-              max="20" />
+            <input id="radiusInput" type="range" onchange="onChangeSlider(this.value, 'radius')" min="20" value="25"
+              max="40" />
             <span id="radius"></span>
           </div>
         </div>
