feat: add help section, add better canvas boundary

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -51,7 +51,7 @@
         <a href="#rooms-modal" onclick="getRooms()">Rooms</a>
         <a href="#settings-modal" onclick="displaySettings()">Settings</a>
         <a href="#">Leaderboard</a>
-        <a href="#">Help</a>
+        <a href="#help-modal">Help</a>
       </nav>
     </section>
   </header>
@@ -110,6 +110,30 @@
           <a class="nav-button" href="#">Cancel</a>
           <a class="nav-button" href="#" onclick="applySettings()">Apply</a>
         </nav>
+      </div>
+    </div>
+    <!-- Help modal -->
+    <div id="help-modal" class="modal">
+      <div class="modal__header">
+        <a href="#">Exit</a>
+      </div>
+      <div class="modal__content" id="help">
+        <p>Circles Box is a thrilling web game where players navigate a sphere across the screen using their mouse,
+          aiming to avoid collisions with other moving spheres. The objective is simple: stay alive for as long as
+          possible amidst dynamic shifts and collisions, creating an intense gaming experience.
+        </p>
+        <p>
+          Control your sphere with quick reflexes and strategic maneuvers to evade obstacles. One wrong move, and it's
+          game over. Your score is based on survival time, encouraging players to beat their own records.
+        </p>
+        <p>
+          But the excitement doesn't end there. Circles Box offers a multiplayer mode for interactive experiences. Join
+          existing rooms or create your own, engaging in real-time battles with friends or strangers worldwide.
+        </p>
+        <p> To enhance immersion, the game provides sound options and adjustable settings like sphere speed and
+          quantity,
+          allowing players to customize their experience and tailor difficulty to their liking.
+        </p>
       </div>
     </div>
     <!-- Snack Bar -->
