--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,6 +21,7 @@
   <script src="scripts/handleLeaderboard.js"></script>
   <script src="scripts/handleGameSettings.js"></script>
   <script src="scripts/handleRooms.js"></script>
+  <script src="scripts/API.js"></script>
 
   <link rel="stylesheet" href="styles/game.css">
   <link rel="stylesheet" href="styles/style.css">
